# openssf-scorecard-example

./: .editorconfig  .pre-commit-config.yaml  AGENTS.md  README.md  SECURITY.md  osv-scanner.toml  renovate.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  fuzz.yml  osv-scanner.yml  sbom.yml  scorecard.yml
go/: go.mod  parse.go  parse_test.go
rust/: Cargo.toml
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: fuzz_reverse.rs
rust/src/: lib.rs
