[package]
name = "scorecard-example-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
scorecard-example = { path = ".." }

[[bin]]
name = "fuzz_reverse"
path = "fuzz_targets/fuzz_reverse.rs"
test = false
doc = false

[workspace]
members = ["."]
